final site with working index and results.cshtml.

--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -3,8 +3,8 @@
 }
 <form action="/results" method="post">
   <div class="form-group">
-    <label for="initial-word">Enter a word:</label>
-    <input type="text" name="initial-word" id="initial-word" required>
+    <label for="word">Enter a word:</label>
+    <input type="text" name="word" id="word" required>
   </div>
   <button type="submit" class="btn btn-lg btn-primary">Get your word's scrabble score:</button>
 </form>
